# emc

./: .gitignore  CMakeLists.txt  README.md  SConstruct  emc.sln  scons_opt.py
emc/: emc.vcxproj
item1/: CMakeLists.txt  item1.cpp  item1.vcxproj  item1.vcxproj.filters
item15/: CMakeLists.txt  item15.cpp  item15.vcxproj  item15.vcxproj.filters
item18/: CMakeLists.txt  item18.cpp  item18.vcxproj  item18.vcxproj.filters
item19/: CMakeLists.txt  item19.cpp  item19.vcxproj  item19.vcxproj.filters
item22/: CMakeLists.txt  impl_pattern.cpp  impl_pattern.h  item22.cpp  item22.vcxproj  item22.vcxproj.filters
item25/: CMakeLists.txt  item25.cpp  item25.vcxproj  item25.vcxproj.filters
item26/: CMakeLists.txt  item26.cpp  item26.vcxproj  item26.vcxproj.filters
item27/: CMakeLists.txt  item27.cpp  item27.vcxproj  item27.vcxproj.filters
item29/: CMakeLists.txt  item29.cpp  item29.vcxproj  item29.vcxproj.filters
item3/: CMakeLists.txt  item3.cpp  item3.vcxproj  item3.vcxproj.filters
item32/: CMakeLists.txt  item32.cpp  item32.vcxproj  item32.vcxproj.filters
item34/: CMakeLists.txt  item34.vcxproj  item34.vcxproj.filters
item5/: CMakeLists.txt  item5.cpp  item5.vcxproj  item5.vcxproj.filters
item7/: CMakeLists.txt  item7.cpp  item7.vcxproj  item7.vcxproj.filters
shared/: bind.hpp  get_name.h  widget.hpp
